Fix min article spacing

--- a/src/styles/_global.css
+++ b/src/styles/_global.css
@@ -47,6 +47,10 @@ body {
 }
 
 .page-container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+  justify-content: space-between;
   position: relative;
 }
 
